Prefill VFM posts with trade details
